# PathTracer

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  image_visualizer.py
common/include/pt/common/: compiler.h
common/include/pt/material/: disney.h  fresnel.h  trowbridge_reitz.h
common/include/pt/math/: scalar.h  vec.h
common/include/pt/render/: debug_view_kind.h  direct_light_mode.h
common/include/pt/restir/: reservoir.h  target.h
common/include/pt/scene/: mitsuba_xml.h  render_settings.h  scene_desc.h
cpu/: CMakeLists.txt
cpu/include/: config.hpp  feature_flags.hpp
cpu/include/PDF/: mfPDF.hpp
cpu/include/base/: lightDiscovery.hpp  primitive.hpp  ray.hpp
cpu/include/integrator/: maxdepth_volume.hpp
cpu/include/material/: materialBase.hpp  materialMath.hpp
cpu/include/medium/: mediumBase.hpp
cpu/include/mesh_io/: fbxLoader.hpp  meshLoader.hpp
cpu/include/primitives/: bvh.hpp  meshBVH.hpp  triangleMesh.hpp
cpu/include/render/: renderManager.hpp
cpu/include/sampler/: sampler.hpp
cpu/include/scenes/: scene_xml.hpp  scenes_01.hpp  scenes_hdri.hpp
cpu/include/utils/: objectTransform.hpp  utility.hpp
cpu/src/: CMakeLists.txt  main.cpp
cpu/src/base/: primitive.cpp
cpu/src/mesh_io/: meshLoader.cpp
cpu/src/primitives/: meshBVH.cpp  triangleMesh.cpp
cpu/src/scenes/: scene_xml.cpp
cpu/tests/: CMakeLists.txt  test_common_material.cpp  test_mesh_io.cpp  test_restir_reservoir.cpp  test_restir_ris_estimator.cpp  test_restir_target.cpp
docs/: restir_di_roadmap.md  restir_no_reuse_validation.md
gpu/: CMakeLists.txt  README.md
gpu/docs/: learning_roadmap.md  prerequisites.md
gpu/src/: Denoiser.cpp  Denoiser.h  Materials.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneExport.cpp  SceneExport.h  SceneXml.cpp  Viewer.cpp  Viewer.h  bsdf.h  bsdfSample.h  bxdf.h  bxdfDispatch.h  bxdfFlags.h  deviceCode.cu  deviceCode.h  launchParams.h  light.h  main.cpp  material.h  orthoBasis.h  postprocess.cu  postprocess.h  ptInterop.h  rayTypes.h
gpu/src/bxdf/: Common.h  Conductor.h  Dielectric.h  DisneyPrincipled.h  ThinDielectric.h
gpu/src/device/: debugViews.h  directLight.h  prd.h  visibility.h
gpu/src/pod/: geometryData.h  launchParams.h  light.h  rayTypes.h  restirState.h
gpu/src/scene/: BuiltinScenes.cpp  Scene.h  SceneBuilders.h  SceneCore.cpp  SceneExport.cpp  SceneExport.h  SceneGeometry.cpp  SceneXml.cpp
gpu/src/shading/: bsdf.h  bsdfSample.h  bxdfDispatch.h  bxdfFlags.h  orthoBasis.h  utils.h
gpu/src/shading/bxdf/: Common.h  Conductor.h  Dielectric.h  DisneyPrincipled.h  Lambertian.h  Mirror.h  ThinDielectric.h
include/: config.hpp
include/base/: lightList.hpp  primitive.hpp  ray.hpp
include/integrator/: maxdepth_volume.hpp  volume_helper.hpp
include/light/: light.hpp
include/material/: materialBase.hpp
include/medium/: phaseMath.hpp
include/primitives/: box.hpp  bvh.hpp  curve.hpp  meshBVH.hpp  triangleMesh.hpp
include/render/: renderManager.hpp
include/scenes/: scenes_01.hpp  scenes_disney.hpp  scenes_hdri.hpp  scenes_medium.hpp
include/utils/: aabb.hpp
src/: CMakeLists.txt  main.cpp
src/mesh_io/: fbxLoader.cpp
src/primitives/: meshBVH.cpp  triangleMesh.cpp
src/utils/: objectTransform.cpp
tests/: CMakeLists.txt
tools/: compare_images.ps1  run_backend_convergence_smoke.ps1  run_nee_baseline.ps1  run_restir_n1.ps1  run_xml_alignment_smoke.ps1
